<?xml version="1.0"?>
<package format="2">
  <name>spot_teleop</name>
  <version>0.1.0</version>
  <description>
    The package for teleoperation for SPOT
  </description>
  <maintainer email="shlee@roas.co.kr">Brighten Lee</maintainer> 
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend> 

  <depend>roscpp</depend>
  <depend>joy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_srvs</depend>
</package>